# rye_docker

./: Dockerfile  README.md  compose.yaml  pyproject.toml
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
config/: config.yaml
config/model/: lgb.yaml
docker/: Dockerfile.cpu  Dockerfile.gpu
notebook/: demo.ipynb
src/: config.py  data.py  demo.ipynb  dir.py  hello.py  seed.py
tests/: test_hello.py
