[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=1.26.4",
    "ipykernel>=6.29.4",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.1",
    "mypy>=1.10.1",
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "third_party"]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "A",  # flake8-builtin
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warning
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "F401",  # Unused import
]


[tool.rye.scripts]
lint = { chain = ["lint:ruff", "lint:ruff_format", "lint:mypy" ] }
"lint:ruff" = "ruff check ./ --diff"
"lint:ruff_format" = "ruff format --check --diff"
"lint:mypy" = "mypy ./ --explicit-package-bases"
fmt = { chain = [ "format:ruff", "format:ruff_notebook", "format:ruff_check" ] }
"format:ruff" = "ruff format ./"
"format:ruff_notebook" = "sh -c 'ruff format ./notebook/*.ipynb'"
"format:ruff_check" = "ruff check ./ --fix"
test = { cmd = "pytest ./tests" }

